Fixed text-gray so that it is more visible.

--- a/_sass/skins/_blue.scss
+++ b/_sass/skins/_blue.scss
@@ -2,7 +2,7 @@
 $theme-color: #0c0b01; // #42A8C0;
 $text-color: #3F4650;
 $text-color-secondary: #545E6C;
-$text-grey: #97AAC3;
+$text-grey: #636f80;
 $divider: #ebe46c;
 $lighter-grey: #1c1a0ff3;
 $darker-grey: #666;
